More podcast imports and redirect fix

--- a/en/_posts/2018-06-06-thepodcast-146.md
+++ b/en/_posts/2018-06-06-thepodcast-146.md
@@ -1,11 +1,11 @@
 ---
 tags: [podcast,video]
-vid: "RlrI6zxwzNA"
+vid: "iuskQwKPJqw"
 ---
 
-# The Podcast #148 - Don’t spend it all
+# The Podcast #146 - Magic of Tidying Up
 
-This week on [The Podcast][p] we discuss the money, [again](https://sliwinski.com/thepodcast-143) and how we should be managing it... especially at a younger age (wisdom from a middle-aged man like me), enjoy:
+This week on [The Podcast][p] we discuss the way to de-clutter homes and offices using [Marie Kondo’s](https://sliwinski.com/kondo) technique. My co-host went all in with this within just 24 hours! Wow:
 
 {% include video.html id=page.vid %}
 
@@ -14,12 +14,12 @@ This week on [The Podcast][p] we discuss the money, [again](https://sliwinski.co
 ## [Listen to this week's episode:][e]
 
 <audio controls>
-<source src="https://files.nozbe.com/podcast/148.mp3" type="audio/mpeg">
+<source src="https://files.nozbe.com/podcast/146.mp3" type="audio/mpeg">
 </audio>
 
 **[Subscribe to The Podcast in iTunes][i]**, [Subscribe on YouTube][y], [Get RSS][rss]
 
-Time: ~ 48 minutes
+Time: ~ 53 minutes
 
 *If you [rate us on iTunes][i], we might give you a shout-out on air! Thanks! :-)*
 
@@ -29,16 +29,17 @@ And if you're new here:
 
 ## Show notes for this episode:
 
-  * [The Podcast 143: How to spend money](http://thepodcast.fm/episodes/143) \- about personal finances
   * [The Life-Changing Magic of Tidying Up by Marie Kondo](https://www.amazon.com/Life-Changing-Magic-Tidying-Decluttering-Organizing/dp/1607747308/) ([audible](https://www.audible.com/pd/Self-Development/The-Life-Changing-Magic-of-Tidying-Audiobook/B01M03NLJY))
-  * [The Podcast 146: Magic of Tidying Up](http://thepodcast.fm/episodes/146)
-  * [Finansowy Ninja](https://finansowyninja.pl/) (polish)
-  * [Profit First: Transform Your Business from a Cash-Eating Monster to a Money-Making Machine](https://www.amazon.com/Profit-First-Transform-Cash-Eating-Money-Making/dp/073521414X/)([audible](https://www.audible.com/pd/Business/Profit-First-Audiobook/B06X15WX5B))
-  * [Gary Vee: What to do after college](https://www.youtube.com/watch?v=RBXZlYdiizk)
+  * [The Podcast 143: How to spend money](http://thepodcast.fm/episodes/143) \- about personal finance
+  * [Marie Kondo: Basic Folding Method](https://www.youtube.com/watch?v=Lpc5_1896ro)
+  * [Marie Kondo Tidy up In New York](https://www.youtube.com/watch?v=Z6BkvPWaCnI)
+  * [Radex notes from book](http://radex.io/books/magic-of-tidying-up/)
+  * [Michael notes from book](https://sliwinski.com/kondo/)
+  * [The Podcast 137: Nomadic lifestyle](http://thepodcast.fm/episodes/137)
 
 [y]: https://michael.gratis/thepodcastyt
 [rss]: http://thepodcast.fm/episodes?format=RSS
-[e]: http://thepodcast.fm/episodes/148
+[e]: http://thepodcast.fm/episodes/146
 
 [p]: https://michael.gratis/thepodcastfm
 [n]: https://michael.gratis/nozbe
