--- a/en/_posts/2018-01-30-thepodcast-129.md
+++ b/en/_posts/2018-01-30-thepodcast-129.md
@@ -35,14 +35,17 @@ The Podcast episodes mentioned in the episode:
   * [The Podcast 32: How to get fat](http://thepodcast.fm/episodes/32) - about “Why we get fat” book
   * [The Podcast 97: Schooling](http://thepodcast.fm/episodes/97) - about FOMO
   * [The Podcast 82: Planning 2017](http://thepodcast.fm/82)
+
 Book mentioned in this episode:
   * [Let Go (Expanded Edition)](https://www.amazon.com/Let-Go-Transform-Moments-Expanded/dp/B077S2YP71/) ([Audible](https://www.audible.com/pd/Bios-Memoirs/Let-Go-How-to-Transform-Moments-of-Panic-into-a-Life-of-Profits-and-Purpose-Audiobook/B0784PH8WP))
   * [Better Than Before: Mastering the Habits of Our Everyday Lives](https://www.amazon.com/Better-Than-Before-Mastering-Everyday/dp/B00R8L6OCM/) ([Audible](https://www.audible.com/pd/Self-Development/Better-Than-Before-Audiobook/B00R8KR28I))
   * [Driven to Distraction at Work: How to Focus and Be More Productive](https://www.amazon.com/Driven-Distraction-Work-Focus-Productive/dp/B017HIXTDW/) ([Audible](https://www.audible.com/pd/Business/Driven-to-Distraction-at-Work-Audiobook/B017HIXTAA))
   * [Why We Get Fat: And What to Do About It](http://www.amazon.com/Why-We-Get-Fat-About/dp/0307474259/) ([Audible](http://www.audible.com/pd/Nonfiction/Why-We-Get-Fat-Audiobook/B004D5K512))
-Apps mentioned in this episode
+
+Apps mentioned in this episode:
   * [Habit List](https://itunes.apple.com/us/app/habit-list-build-a-better-you/id525102168?mt=8)
   * [Productive](https://itunes.apple.com/us/app/productive-habit-tracker/id983826477?mt=8)
+
 Other links:
   * [Michaels 2016 review: not bad at all!](https://sliwinski.com/2016/)
   * [Accidental Tech Podcast](http://atp.fm/)
