Fixes to tags and stuff

--- a/en/_posts/2019-12-11-office20.md
+++ b/en/_posts/2019-12-11-office20.md
@@ -3,7 +3,7 @@ tags: [office]
 img: "office20.jpg"
 ---
 
-# My Home Office 2020 - Stage 1 - prototyping new ideas
+# My Home Office for 2020 - prototyping new ideas
 
 The 2019 is ending and it's time for a major overhaul of my [Home Office](/tag/office). I've been thinking about it for quite a while now, but I couldn't get around to doing it because I wasn't 100% sure about what I wanted. I was procrastinating. Then, I realized I don't have to do it all at once - I can do it in stages - I can move things around and see how the changes feel... and then keep tweaking the ideas. Last week I finished stage 1 - moving the Whiteboard to a different wall... and a few other tweaks. Here goes:
 
