--- a/en/_posts/2020-07-25-now200725.md
+++ b/en/_posts/2020-07-25-now200725.md
@@ -2,7 +2,7 @@
 title: "What I'm doing as of July 25"
 vid: "uq2xwFTrJGw"
 img: szaffi.jpg
-tags: [now]
+tags: [now-updates]
 ---
 
 I'm still in my home office grounded by the “coronavirus”:
