--- a/en/_posts/2020-08-01-now200801.md
+++ b/en/_posts/2020-08-01-now200801.md
@@ -2,7 +2,7 @@
 title: "What I'm doing as of August 1"
 vid: "uq2xwFTrJGw"
 img: nooffice-writing.jpg
-tags: [now]
+tags: [now-updates]
 ---
 
 I'm taking the month off in August for a well-deserved vacation:
