--- a/en/_posts/2020-12-17-journal20.md
+++ b/en/_posts/2020-12-17-journal20.md
@@ -1,5 +1,5 @@
 ---
-tags: [ipadonly,iphone,life]
+tags: [ipadonly,iphone,productivity]
 cover: "journal20.jpg"
 ---
 
@@ -13,15 +13,11 @@ I like journaling daily. I like planning my next day in the evening. I like trac
 
 When [in 2016 I started to finally journal consistently](https://sliwinski.com/journal/), I prepared a simple *workflow* that would help me do that. I wanted to be able to journal on both the iPhone and the iPad, by simply answering a few questions in the morning and in the evening. It worked. Later in 2018 [I added daily planning](/workflows/) to it using apps like [Bear][b] and [Ulysses][u]. In 2019 [I added "intermittent journaling" to it](/journaling/) and simplified the process by just using the Bear app and several Siri Shortcuts. In the beginning of this year [I updated these shortcuts to iOS13](/newjournal/).
 
-Today, I'm simplifying the process even more by using **just one Siri Shortcut** and only one app: [iA Writer][a].
-
-This way I get to use the same app for all of my writing: [#NoOffice book](https://NoOffice.org/), marketing sales letters for [Nozbe][n], [blog posts](/archive) on this blog, articles for [iMagazine](/pl/imagazine) and everything else. And now journaling, too.
+Today, I'm simplifying the process even more by using **just one Siri Shortcut** and only one app: **[iA Writer][a]**. This way I get to use the same app for all of my writing: [#NoOffice book](https://NoOffice.org/), marketing sales letters for [Nozbe][n], [blog posts](/archive) on this blog, articles for [iMagazine](/pl/imagazine) and everything else. And now journaling, too.
 
 ### [Get my "Journal Writer" Siri Shortcut][s]
 
-Once you install this Shortcut, you'll be asked to paste your iA Writer Token (you'll find it in *Settings > URL commands > Auth Token* - it’s the same token for all your iA Writer apps on all of your devices).
-
-You'll also be asked for the name of the folder in iA Writer's iCloud for your journaling files. The default value is "Journal". Duh!
+Once you install this Shortcut, you'll be asked to paste your iA Writer Token (you'll find it in *Settings > URL commands > Auth Token* - it’s the same token for all your iA Writer apps on all of your devices). You'll also be asked for the name of the folder in iA Writer's iCloud for your journaling files. The default value is "Journal". Duh!
 
 ## Here's what my journaling/planning/time tracking shortcut does, step by step:
 
@@ -33,7 +29,7 @@ The Shortcut is fairly easy and I've added several comments in it for better und
 4. **Evening Journal**. In the evening the journal focuses on wrapping up the day. It asks me what was awesome today, which sport I practiced and what I could have done better. After that it always asks the open-ended question of *Anything else?*. Once answered, it adds the entry to the journal file.
 5. **Planning?** Once the journal is written, it asks me if I want to keep going and plan my day.
 6. **Evening planning**. I plan my day in the evening, the script checks my calendar for tomorrow and asks me about my up to three most important tasks for the next day. Then it adds them to the journal file as well as creates a new file for tomorrow with tomorrow's date as the file name.
-7. **Morning planning**. This routine adds stuff to the planning file created yesterday. It adds my daily checklist (feel free to customize it in your version of the Shortcut) and a list of 30 minute intervals in the day starting from 9am, when I begin my work. Now I'm ready to get on with my day!
+7. **Morning planning**. This routine adds stuff to the planning file created yesterday (in point 6). It adds my daily checklist (feel free to customize it in your version of the Shortcut) and a list of 30 minute intervals in the day starting from 9am, when I begin my work. Now I'm ready to get on with my day!
 
 ## Additional tips for my Journaling Shortcut
 
@@ -55,6 +51,13 @@ Another thing that you can easily notice on the image above is that the Markdown
 
 No, this is not as robust as [Nozbe][n], but it lets me check off my morning routine easily as the day progresses. The rest of my tasks and projects are of course in [Nozbe][n].
 
+A few side notes:
+
+* As you can see in the Shortcut, I've added two options to just plan day in the Morning or Evening. It's because sometimes the Shortcut just stops after the journaling part and doesn't let me go ahead and plan. This way I can invoke it again and skip journaling and go to planning directly. Siri Shortcuts is a very powerful piece of software but still very buggy.
+* [iA Writer][a] is great, but still doesn't support Siri Shortcuts natively, only through [URL Schemes](https://ia.net/writer/support/general/system-requirements#url-schemes) which is OK for this but it has some limitations and required me to do some URL encoding in the Shortcut. I hope they'll add native support in the future.
+* Additional benefit of switching to this Shortcut and [iA Writer][a] instead of [Bear][b] and [Ulysses][u] is that each of these journaling and planning entries is a simple text file which can be edited by any app. The geeky part of me feels more comfortable using plain text files in Markdown rather than closed systems. And the iCloud sync seems pretty reliable these days. Having said that, all of the above apps are great for writing. It's just my personal preference now.
+* I use this Shortcut on both the iPhone and the iPad. I usually write the Evening Journal on the iPad before going to sleep but I very often find myself writing the Morning Journal using the iPhone just after I've waken up. Answering journaling questions on the iPhone using the *swiping gestures* or *dictation* is pretty neat. And the iCloud sync of journal files has been working for me quite reliably.
+
 ## Start journaling today and make it a habit for the next year and all the years to come!
 
 I've been pretty regularly journaling for the last 5 years. Over this period of time I've experimented with several apps and workflows and what you see today is the result of these years of journaling.
@@ -65,7 +68,7 @@ You can start today, just:
 
 * [Get the "Journal Writer" Shortcut][s]
 * [Get the iA Writer app for your iPhone, iPad and Mac][a]
-* [Get the "Open Today" Shortcut][st] - this is optional
+* Optionally [get the "Open Today" Shortcut][st]
 
 Enjoy journaling on your iPhone and/or iPad!
 
