--- a/en/_posts/2016-07-21-thepodcast-56.md
+++ b/en/_posts/2016-07-21-thepodcast-56.md
@@ -19,12 +19,17 @@ And I'm going to actually provide you with even more value when we [connect via 
 ## [Listen to this week's episode:][e]
 
 <audio controls>
-<source src="https://files.nozbe.com/podcast/56.mp3" type="audio/mpeg">
+<source src="https://files.nozbe.com/podcast/056.mp3" type="audio/mpeg">
 </audio>
 
 **[Subscribe to The Podcast in iTunes][i]**
 
-*The Podcast is a chat between [Radek][r] (VP Engineering at [Nozbe][n]) and yours truly (CEO at [Nozbe][n]) about [productivity](/productivity), [business](/business), [books](/books), and whatever else comes to mind... - if you liked this episode, make sure to [check out past episodes](/podcast).*
+## Show notes for this episode:
+
+  * [Essentialism - The Disciplined Pursuit of Less by Greg McKeown](https://www.amazon.com/Essentialism-Disciplined-Pursuit-Greg-McKeown/dp/0804137382?ie=UTF8&tag=radexio-20) ([audible](http://www.audible.com/pd/Self-Development/Essentialism-Audiobook/B00IWZ6XGA?tag=radexio-20))
+  * [sliwinski.com](https://sliwinski.com/)
+  * [nooffice.org](https://nooffice.org/)
+  * [The Podcast 18 and the Pyramid of Communication](http://thepodcast.fm/18)
 
 [e]: http://thepodcast.fm/episodes/56
 [p]: https://michael.gratis/thepodcastfm
