iPad Home screen

--- a/en/_posts/2018-02-02-2017.md
+++ b/en/_posts/2018-02-02-2017.md
@@ -11,7 +11,7 @@ We’re already 1 month in 2018 but I haven’t still posted my yearly review...
 
 ![{{ page.title }}](/img/{{ page.img }})
 
-Before I start, here are my past yearly reviews: [2016](https://sliwinski.com/2016), [2015](https://sliwinski.com/2015), [2014](https://sliwinski.com/2014) and [2013](https://sliwinski.com/summary2013).
+Before I start, here are my past yearly reviews: [2016](/2016), [2015](https://sliwinski.com/2015), [2014](https://sliwinski.com/2014) and [2013](https://sliwinski.com/summary2013).
 
 ## 2017 wasn’t as good as I hoped... in some ways...
 
