--- a/en/_posts/2019-01-09-2018.md
+++ b/en/_posts/2019-01-09-2018.md
@@ -5,7 +5,7 @@ img: "2018.jpg"
 
 # 2018 review - an ongoing personal and business development
 
-Now that 2018 is over and 2019 is upon us... and I’m already 2/3 in doing my [annual review](https://sliwinski.com/annual), it’s time for a post summarizing the last year for me. I’ve done similar posts about [2017](https://sliwinski.com/2017), [2016](https://sliwinski.com/2016), [2015](https://sliwinski.com/2015), [2014](https://sliwinski.com/2014) and [2013](https://sliwinski.com/summary2013)... and they mostly serve me as a reminder how things went, but I hope that they also bring value to you - so here goes: 
+Now that 2018 is over and 2019 is upon us... and I’m already 2/3 in doing my [annual review](/annual), it’s time for a post summarizing the last year for me. I’ve done similar posts about [2017](/2017), [2016](/2016), [2015](https://sliwinski.com/2015), [2014](https://sliwinski.com/2014) and [2013](https://sliwinski.com/summary2013)... and they mostly serve me as a reminder how things went, but I hope that they also bring value to you - so here goes: 
 
 <!--More-->
 
@@ -13,7 +13,7 @@ Now that 2018 is over and 2019 is upon us... and I’m already 2/3 in doing my [
 
 ## Overall it’s been a great year with lots of new things happening
 
-This year was very interesting. Lots of travels. Lots of new feelings running my company and quite a few public appearances. And lots of fun in the process. Here’s the complete list of [learnings](https://sliwinski.com/learnings) from 2018:
+This year was very interesting. Lots of travels. Lots of new feelings running my company and quite a few public appearances. And lots of fun in the process. Here’s the complete list of [learnings](/learnings) from 2018:
 
 ## Lots of travels, including a first ever sabbatical
 
@@ -25,9 +25,9 @@ This was a completely new feeling for me - not thinking about the day-to-day aff
 
 ## 3 major conferences and one TV appearance!
 
-I haven’t made that many [public appearances](https://sliwinski.com/where) in a while - 3 major conferences: [Infoshare](https://sliwinski.com/infoshare), Zyj w Obfitosci and [Mobiconf](https://sliwinski.com/mobiconf)... as well as first time ever on [Polish national TV](https://sliwinski.com/tvp2).
+I haven’t made that many [public appearances](/guest) in a while - 3 major conferences: [Infoshare](/infoshare), Zyj w Obfitosci and [Mobiconf](/mobiconf)... as well as first time ever on [Polish national TV](/tvp2).
 
-While the TV appearance was fun, I’m particularly proud of the conferences I went to as I talked about the basics of [why #NoOffice is something you need](https://sliwinski.com/infoshare) to consider and later how to use [mobile apps to run a #NoOffice company](https://sliwinski.com/mobiconfvideo).
+While the TV appearance was fun, I’m particularly proud of the conferences I went to as I talked about the basics of [why #NoOffice is something you need](/infoshare) to consider and later how to use [mobile apps to run a #NoOffice company](/mobiconfvideo).
 
 ## I’m still fit, and I’ll be even more this year... and I discovered something new!
 
@@ -43,7 +43,7 @@ That’s correct. Last year I did 2 Olympic-distance triathlon races and now tha
 
 ## And I discovered tennis!
 
-[Why suck at 3 sports when you can suck at 4?](https://sliwinski.com/tennis)
+[Why suck at 3 sports when you can suck at 4?](/tennis)
 
 Completely by accident I started getting tennis classes. Actually, I’ve signed up my daughter but she didn’t like it and I just asked the trainer if he’d be willing to train a complete newbie... and he did.
 
