--- a/en/_posts/2020-01-05-2019.md
+++ b/en/_posts/2020-01-05-2019.md
@@ -15,11 +15,11 @@ Hello in 2020! So... instead of saying that ["hindsight is 20/20"](https://www.p
 
 ## 2019 review - personal life, sports, business and beyond...
 
-This is my 7th annual review where I summarize the three key aspects of my life - personal life, fitness and business. I'm writing these reviews every year while doing my [annual planning](https://sliwinski.com/annual) mostly for my future self - to have a regular glimpse into my life in regular intervals. To be able to see what (and how!) I was doing, what my hopes and dreams were... and how they changed over time. I hope these reviews also bring you value and inspire you to change something in your life! For reference, [here are my summaries](/year) of [2018](https://sliwinski.com/2018/), [2017](https://sliwinski.com/2017), [2016](https://sliwinski.com/2016), [2015](https://sliwinski.com/2015), [2014](https://sliwinski.com/2014) and [2013](https://sliwinski.com/summary2013).
+This is my 7th annual review where I summarize the three key aspects of my life - personal life, fitness and business. I'm writing these reviews every year while doing my [annual planning](/annual) mostly for my future self - to have a regular glimpse into my life in regular intervals. To be able to see what (and how!) I was doing, what my hopes and dreams were... and how they changed over time. I hope these reviews also bring you value and inspire you to change something in your life! For reference, [here are my summaries](/yearly) of [2018](/2018/), [2017](/2017), [2016](/2016), [2015](https://sliwinski.com/2015), [2014](https://sliwinski.com/2014) and [2013](https://sliwinski.com/summary2013).
 
 ## Personal life - entering a new decade!
 
-Yep, this past year [I turned 40](https://sliwinski.com/forty). And grew a beard 🧔 which all of my girls (including my wife) really like, so I'm sticking with it for now.
+Yep, this past year [I turned 40](/forty). And grew a beard 🧔 which all of my girls (including my wife) really like, so I'm sticking with it for now.
 
 Speaking of the women in my life - my three daughters are growing very fast. The eldest will turn 11 in a few days and she's already 150cm tall and her main thing now is synchronized swimming. The middle one just turned 7, is in the second grade of primary school and I'm very impressed with her artistic abilities. The youngest is not only the cutest of them all but she's also the fastest in achieving almost anything. Can't believe how much she talks now!
 
@@ -31,7 +31,7 @@ Speaking of walking, I really liked how in total I walked 363 km last year. It's
 
 ## Sports and fitness - steady training with room for improvement!
 
-My ambitious plan to do a [70.3 Ironman](https://sliwinski.com/ironman) completely [and utterly failed](https://sliwinski.com/noiron). As a consolation prize I did my [11th olympic-distance triathlon](https://sliwinski.com/tri11) and it went pretty good. I [tracked it using the AppleWatch](https://sliwinski.com/triwatch) which finally makes it a gadget present at every stage of my triathlon journey.
+My ambitious plan to do a [70.3 Ironman](/ironman) completely [and utterly failed](/noiron). As a consolation prize I did my [11th olympic-distance triathlon](/tri11) and it went pretty good. I [tracked it using the AppleWatch](/triwatch) which finally makes it a gadget present at every stage of my triathlon journey.
 
 This year I'm NOT planning to attempt another Ironman. I'm sticking with just doing 2 olympic-distance races - one in the Spring and one in the Fall. 
 
@@ -43,10 +43,10 @@ After all, I'm doing all these three sports just to keep being in shape and for 
 
 Apart from these 3 sports, I made significantly more time for  other sports this year:
 
-* **[Tennis](https://sliwinski.com/tennis) - 60h** - Lots of progress. I have a personal trainer session every other week and a weekly match with a buddy of mine - Steve. I doubled my time on the court - from 30h in 2018, to 60h in 2019 - more than 1 hour per week average! And I intend to keep it at this level now.
+* **[Tennis](/tennis) - 60h** - Lots of progress. I have a personal trainer session every other week and a weekly match with a buddy of mine - Steve. I doubled my time on the court - from 30h in 2018, to 60h in 2019 - more than 1 hour per week average! And I intend to keep it at this level now.
 * **Strength training - 17h** - much more than in 2018 (only 4h!) and I feel much stronger now. My new goal is to do at least one 30min session a week - so around 20-30h total.
 
-As I have my new [Apple Watch series 5](https://sliwinski.com/watch5) with me all the time I'm tracking my progress with activity rings. I've just reached my 1000th move goal and had a "perfect month" for 6 months in 2019 which is kind of amazing.
+As I have my new [Apple Watch series 5](/watch5) with me all the time I'm tracking my progress with activity rings. I've just reached my 1000th move goal and had a "perfect month" for 6 months in 2019 which is kind of amazing.
 
 This proves that despite all that happened I had a very active year sports-wise and I'm hoping that the routines I've set up in 2019 will serve me even better in 2020.
 
@@ -58,7 +58,7 @@ I finally fired myself from the last direct role in my company and I'm no longer
 
 Last year was my year of un-tangling and this year will be a true test if I have what it takes to learn to take the company to a whole new level.
 
-[I took lots of time off social media this year and this served me well](https://sliwinski.com/sms/). I'll keep posting on Twitter, Facebook and LinkedIn but only a little and rarely. I'll hardly be using Instagram anymore... The most important thing is that I'm no longer addicted to any of these apps, which is great!
+[I took lots of time off social media this year and this served me well](/sms/). I'll keep posting on Twitter, Facebook and LinkedIn but only a little and rarely. I'll hardly be using Instagram anymore... The most important thing is that I'm no longer addicted to any of these apps, which is great!
 
 We've had a very turbulent time when preparing to launch [Nozbe Teams](https://nozbe.com/teams). We went back and forth between the new Nozbe product names - it's not Nozbe 4 anymore, it's Nozbe Teams now. [We'll be a two-product company](/podcast-193).
 
