--- a/en/_posts/2021-01-21-2020.md
+++ b/en/_posts/2021-01-21-2020.md
@@ -5,7 +5,7 @@ cover: "2020.jpg"
 
 # 2020 - a true roller-coaster year 🦠 
 
-What a year 2020 was. The start was great, then the pandemic hit and now the world is completely different from the one we knew just a year ago as I was writing my [2019 summary](/2019). Now, after I've published my subjective list of [best blog posts of 2020](/2020best), I've re-thought the Home Screens of both my [iPad Pro 11"](/ipadscreen) as well as the [iPhone Mini](/iphonescreen) it’s now time for my 2020 summary. Posting such summary became kind of a tradition over the [past 7 years](/yearly). Luckily for me 2020 wasn’t all bad news. It was a true roller-coaster:
+What a year 2020 was. The start was great, then the pandemic hit and now the world is completely different from the one we knew just a year ago as I was writing my [2019 summary](/2019). Now, after I've published my subjective list of [best blog posts of 2020](/2020best), I've redesigned the Home Screens of both my [iPad Pro 11"](/ipadscreen) as well as the [iPhone Mini](/iphonescreen) it’s now time for my 2020 summary. Posting such summary became kind of a tradition over the [past 7 years](/yearly). Luckily for me 2020 wasn’t all bad news but it really was a roller-coaster of a year:
 
 <!--More-->
 
@@ -28,24 +28,24 @@ The bad news is that selling a business tool is completely different than sellin
 
 ## This [new blog called Michael.team](/new) launched!
 
-It's been a while since I wanted to finally simplify my domain name and my blogging engine and move from [Sliwinski.com](https://sliwinski.com/) to **Michael.team**. My surname is hard to spell, and my first name is very popular and the *DOT Team* domain is very cool as it's completely in sync with what I'm about now - team productivity.
+It's been a while since I wanted to finally simplify my domain name and my blogging engine and move from [Sliwinski.com](https://sliwinski.com/) to **Michael.team**. My surname is hard to spell, and my first name is very popular and the *DOT Team* domain is very cool as it's completely in sync with what I'm about now - [team productivity](/productivity).
 
 Instead of leaving the old domain, I'll be slowly migrating old posts and getting them organized again. It's a long process but I just want to do it. I already managed to migrate all posts from [2020](/2020best), [2019](/2019best), [2018](/2018best), 2017 and 2016 so far. I still have a long way to migrate everything all the way back to 2008. Wish me luck!
 
 While launching this site I'm learning new and old technologies like JavaScript, Jekyll, HTML5, advanced CSS and Liquid. Based on my learnings I launched two small projects:
 
-- [YouTube video watcher that doesn't track you](/yt/)
-- [Virtual Dice to use when playing board games](/dice/)
+- **[YouTube video watcher](/yt/)** that doesn't track you
+- **[Virtual Dice](/dice/)** to use when playing board games
 
 ## Two [#NoOffice](/nooffice) podcasts launched in August: [NoOffice.fm](/noofficefm) in English and [NieMaBiura.pl](/pl/niemabiura) in Polish.
 
 When the pandemic happened we felt like we needed to help everyone dealing with the sudden *Work From Home* scenario, so initially we did a few Live video shows, but later we decided to just go ahead and start recording a fully-blown podcast. I'm happy our VP of Product, [Rafal](https://nozbe.com/rafal), pushed me to do this.
 
-We're recording every Tuesday at 2pm European time an publishing the following Friday. We're on a tick-tock cadence: one Friday in English and the next one in Polish. Thus for each audience there's a new episode every two weeks.
+We're recording every Tuesday at 2pm European time and publishing the following Friday. We're on a tick-tock cadence: one Friday in English and the next one in Polish. Thus for each audience there's a new episode every two weeks.
 
 ## I got back to writing the [#NoOffice book](https://NoOffice.org/){:target='_blank'}.
 
-In August I decided to take time off from running [Nozbe][n] and [take much needed vacation](/now200801/) and get back to writing the #NoOffice book. It's been long overdue. [I announced I'd be writing it back in June of 2015](https://sliwinski.com/noofficebook/){:target='_blank'}!
+In August I decided to take time off from running [Nozbe][n] and [take much needed vacation](/now200801/) and get back to writing the #NoOffice book. It's been long overdue. [I announced I'd be writing this book back in June of 2015!](https://sliwinski.com/noofficebook/){:target='_blank'}!
 
 It's been a long struggle of mine. On one hand, what do I know? I'm just a guy running a small software company that works completely remotely. There are bigger companies than mine doing the same. Who am I to write about it?
 
@@ -73,7 +73,7 @@ I'm looking at everything from a perspective of what defines me. Of who I am. An
 
 ### I'm a CEO of an all-remote software company [Nozbe][n]
 
-This means I need to behave like a true CEO. This means I'm letting go of all my small day-to-day responsibilities and focusing on the one true responsibility - being a leader who takes care of the team and the business.
+This means I need to behave like a true CEO. I'm letting go of all my small day-to-day responsibilities and focusing on the one true responsibility - being a leader who takes care of the team and the business.
 
 I want my team to thrive and for them to do that I need to give them more autonomy. I cannot both be helpful to them and also taking responsibilities from them.
 
@@ -95,13 +95,13 @@ I'll be also conducting more [webinars](/webinars) and other courses throughout 
 
 ### I'm a triathlete…
 
-To stay in shape I'll keep doing my triathlon training. In 2020 because of the pandemic I took part only in one triathlon, which I organized myself with a bunch of friends. It was only 6 of us, but it was fun anyway!
+To stay in shape I'll keep doing my triathlon training. In 2020 because of the pandemic I took part only in one triathlon, which I organized with a bunch of friends. It was only 6 of us, but it was lots of fun anyway!
 
 Even though the lockdown hit in March, I still managed to outperform myself from [2019](/2019) in almost every sport:
 
-* **Swimming - 31km** - (22h) the only sport that I did less of compared to previous year (41km). The reason was simple - because of the pandemic I stopped going to the swimming pool. I was afraid of being in a closed, not ventilated locker room with other people. I mostly swam in the sea.
-* **Biking - 1924km** - (100h) much better than 1700km of 2019. After the lockdown my shape was worse but I quickly got it back. I'm still slower than previous years, but getting better and enjoying my bike rides again! Milestones only I can understand: M2, RH16, R3, SV7.
-* **Running - 492km** - (47h) slightly better than 478km of 2019. The most since 2016. And very close to my 500km ideal. I keep enjoying running and listening to audiobooks.
+* **Swimming - (22h) 31km** - the only sport that I did less of compared to previous year (41km). The reason was simple - because of the pandemic I stopped going to the swimming pool. I was afraid of being in a closed, not ventilated locker room with other people. I mostly swam in the sea.
+* **Biking - (100h) 1924km** - much better than 1700km of 2019. After the lockdown my shape was worse but I quickly got it back. I'm still slower than previous years, but getting better and enjoying my bike rides again! Note to self about my milestones: M2, RH16, R3, SV7.
+* **Running - (47h) 492km** - slightly better than 478km of 2019. The most since 2016. And very close to my 500km ideal. I keep enjoying running and listening to audiobooks.
 
 So to sum it up, I'm a triathlete who swims around 30-50km per year, bikes 1500-2000km per year and runs 400-500km per year. These are not goals, these are more like reference points and define me as a triathlete. And I compete in at least one Olympic distance triathlon per year (1.5km swim, 40km bike and 10km run).
 
@@ -128,8 +128,7 @@ As for skills, I'm also trying to get my two eldest daughters to learn touch-typ
 
 With fewer goals, 2021 will be more about who I am and what I want to be passionate about.
 
-And last but not least, let's all get vaccinated so we can return to any type of normality pretty soon.
-
+And last but not least, let's all get vaccinated so we can return to any type of normality pretty soon. Here's hoping!
 
 ![{{ page.title }}](/img/{{ page.cover }})
 
