--- a/en/_posts/2021-01-21-2020.md
+++ b/en/_posts/2021-01-21-2020.md
@@ -3,9 +3,9 @@ tags: [yearly]
 cover: "2020.jpg"
 ---
 
-# 2020 - a true roller-coaster year 🦠 
+# 2020 review - a true roller-coaster year 🦠 
 
-What a year 2020 was. The start was great, then the pandemic hit and now the world is completely different from the one we knew just a year ago as I was writing my [2019 summary](/2019). Now, after I've published my subjective list of [best blog posts of 2020](/2020best), I've redesigned the Home Screens of both my [iPad Pro 11"](/ipadscreen) as well as the [iPhone Mini](/iphonescreen) it’s now time for my 2020 summary. Posting such summary became kind of a tradition over the [past 7 years](/yearly). Luckily for me 2020 wasn’t all bad news but it really was a roller-coaster of a year:
+What a year 2020 was. The start was great, then the pandemic hit and now the world is completely different from the one we knew just a year ago as I was writing my [2019 review](/2019). Now, after I've published my subjective list of [best blog posts of 2020](/2020best), I've redesigned the Home Screens of both my [iPad Pro 11"](/ipadscreen) as well as the [iPhone Mini](/iphonescreen) it’s now time for my 2020 review. Posting such summary became kind of a tradition over the [past 7 years](/yearly). Luckily for me 2020 wasn’t all bad news but it really was a roller-coaster of a year:
 
 <!--More-->
 
@@ -20,9 +20,7 @@ In my professional life I managed to launch a few things anyway:
 
 ## [Nozbe Teams][n] launched in April-May!
 
-The app we've been working on for the last 4 years finally launched in the middle of the lockdown. It wasn't ideal, but we were happy to be inviting first customers on board.
-
-Judging by the engagement of first customers, we've got a great product on our hands. Not only we love using it to get our teams organized but we know for a fact that other teams need it now more than ever.
+The app we've been working on for the last 4 years finally launched in the middle of the lockdown. It wasn't ideal, but we were happy to be inviting first customers on board and not only we love using it to get our teams organized but we know for a fact that other teams need it now more than ever.
 
 The bad news is that selling a business tool is completely different than selling a consumer app like [Nozbe Personal][np]. So in many ways we're back at being beginners learning to promote an app from scratch. Which is both exciting and frustrating. Hopefully 2021 will be the year when [Nozbe Teams][n] finally takes off!
 
@@ -30,7 +28,7 @@ The bad news is that selling a business tool is completely different than sellin
 
 It's been a while since I wanted to finally simplify my domain name and my blogging engine and move from [Sliwinski.com](https://sliwinski.com/) to **Michael.team**. My surname is hard to spell, and my first name is very popular and the *DOT Team* domain is very cool as it's completely in sync with what I'm about now - [team productivity](/productivity).
 
-Instead of leaving the old domain, I'll be slowly migrating old posts and getting them organized again. It's a long process but I just want to do it. I already managed to migrate all posts from [2020](/2020best), [2019](/2019best), [2018](/2018best), 2017 and 2016 so far. I still have a long way to migrate everything all the way back to 2008. Wish me luck!
+Instead of leaving the old domain, I'll be slowly migrating old posts and getting them organized again. It's a long process but I just want to do it. I already managed to migrate all posts from [2020](/2020best), [2019](/2019best), [2018](/2018best), 2017 and 2016 so far. It'll still take me a while to migrate everything all the way back from 2008. Wish me luck!
 
 While launching this site I'm learning new and old technologies like JavaScript, Jekyll, HTML5, advanced CSS and Liquid. Based on my learnings I launched two small projects:
 
@@ -39,7 +37,7 @@ While launching this site I'm learning new and old technologies like JavaScript,
 
 ## Two [#NoOffice](/nooffice) podcasts launched in August: [NoOffice.fm](/noofficefm) in English and [NieMaBiura.pl](/pl/niemabiura) in Polish.
 
-When the pandemic happened we felt like we needed to help everyone dealing with the sudden *Work From Home* scenario, so initially we did a few Live video shows, but later we decided to just go ahead and start recording a fully-blown podcast. I'm happy our VP of Product, [Rafal](https://nozbe.com/rafal), pushed me to do this.
+When the pandemic happened we felt like we needed to help everyone dealing with the sudden *Work From Home* scenario, so initially we did a few live video shows, but later we decided to just go ahead and start recording a fully-blown podcast. I'm happy our VP of Product, [Rafal](https://nozbe.com/rafal), pushed me to do this.
 
 We're recording every Tuesday at 2pm European time and publishing the following Friday. We're on a tick-tock cadence: one Friday in English and the next one in Polish. Thus for each audience there's a new episode every two weeks.
 
@@ -49,23 +47,23 @@ In August I decided to take time off from running [Nozbe][n] and [take much need
 
 It's been a long struggle of mine. On one hand, what do I know? I'm just a guy running a small software company that works completely remotely. There are bigger companies than mine doing the same. Who am I to write about it?
 
-But then again, when the pandemic happened, I realized people needed to learn from us. Businesses that suddenly had to work from home were completely lost. Things that to us at [Nozbe][n] are completely natural and easy, to them is a new world.
+But then again, when the pandemic happened, I realized people needed to learn from us. Businesses that suddenly had to work from home were completely lost. Things that to us at [Nozbe][n] are natural and easy, to them is a new world.
 
-So now I'm finally writing this book. And I'm making it completely free to read online. [In August I wrote 60% of it](/nooffice1/) and I [vlogged about it](/nooffice1vlog/). Later I got back to work and was writing much slower. I'm at 84% now and this year in 2021 I've made it my priority to finish the book. As a way to have social accountability [I'm documenting the whole writing process on my Instagram](https://www.instagram.com/michaelsliwinski/){:target='_blank'}.
+So now I'm finally writing this book. And I'm making it completely free to read online. [In August I wrote 60% of it](/nooffice1/) and I [vlogged about it](/nooffice1vlog/). Later I got back to work and was writing much slower. I'm at 82% now and this year in 2021 I've made it my priority to finish the book. As a way to have social accountability [I'm documenting the whole writing process on my Instagram](https://www.instagram.com/michaelsliwinski/){:target='_blank'}.
 
 ## It's been a tough year for many, including my company.
 
-As the CEO of [Nozbe][n] I've had a tough year overall. Selling two apps: [Nozbe Personal][np] and [Nozbe Teams][n] wasn't as easy as I hoped. Overall we suffered a revenue loss of 20%. Many people assumed that just because we have two pieces of software that can help people in this pandemic, we'd naturally be winning. I wish it was that easy. We're no Slack or Zoom. Not just yet.
+As the CEO of [Nozbe][n] I've had a tough year overall. Running two apps: [Nozbe Personal][np] and [Nozbe Teams][n] wasn't as easy as I hoped. Overall we suffered a revenue loss of 20%. Many people assumed that just because we have two pieces of software that can help people in this pandemic, we'd naturally be winning. I wish it was that easy. We're no Slack or Zoom. Not just yet.
 
-Navigating this year people-wise was also challenging. On one hand I felt I had to keep my team motivated and calm, on the other I had to make some difficult changes. I had quite a few sleepless nights last year because of that. Eventually we hired 3 new folks and 4 others left the company.
+Navigating this year people-wise was also challenging. On one hand I felt I had to keep my team motivated and calm, on the other I had to make some difficult changes. I had quite a few sleepless nights last year because of that. Eventually we hired 3 new folks and in the meantime 4 others left the company.
 
 The silver lining is that I'm currently really happy with the team as it is right now entering this year. **We're 21 for '21.**
 
 ## Time for less. 2021 will be all about simplicity and essentialism!
 
-As a read of my blog, you know one of my favorite books of all time is [Essentialism](https://sliwinski.com/essentialism) by [Greg McKeown](https://sliwinski.com/greg-mckeown). I've [read his book countless times](/essentialist) and as this year started I read it again to remember to focus on what's essential.
+One of my favorite books of all time is [Essentialism](https://sliwinski.com/essentialism) by [Greg McKeown](https://sliwinski.com/greg-mckeown). I've [read his book countless times](/essentialist) and as this year started I read it again to remember to focus on what's essential.
 
-I've already simplified my [iPad's Home Screen](/ipadscreen), [iPhone's Home Screen](/iphonescreen) and [journaling routine](/journal20). These changes should help me work in a more focused way.
+I've already simplified my [iPad's Home Screen](/ipadscreen), [iPhone's Home Screen](/iphonescreen) and [journaling routine](/journal20). These changes are already helping me to work in a more focused way.
 
 However, the changes are going to be deeper. This year I'm trying to live with fewer goals, just like my online friends [Leo Babauta](https://zenhabits.net/goal-less/) and [Jason Fried](https://m.signalvnoise.com/ive-never-had-a-goal/). I'm not sure goals work for me anymore.
 
@@ -73,9 +71,9 @@ I'm looking at everything from a perspective of what defines me. Of who I am. An
 
 ### I'm a CEO of an all-remote software company [Nozbe][n]
 
-This means I need to behave like a true CEO. I'm letting go of all my small day-to-day responsibilities and focusing on the one true responsibility - being a leader who takes care of the team and the business.
+This means I need to behave like a true CEO. I'm letting go of all my smaller day-to-day responsibilities and focusing on the one true responsibility - being a leader who takes care of the team and the business.
 
-I want my team to thrive and for them to do that I need to give them more autonomy. I cannot both be helpful to them and also taking responsibilities from them.
+I want my team to thrive and for them to do that I need to give them more autonomy. I cannot both be helpful to them and also taking responsibilities away from them.
 
 They're responsible and I'm helpful. That's the new dynamic.
 
@@ -124,9 +122,9 @@ This is my main role. This year I'm making sure I spend enough time with all of 
 
 As for skills, I'm also trying to get my two eldest daughters to learn touch-typing. Let's see!
 
-## Overall 2020 was hard and I'm hopeful about 2021!
+## Overall 2020 was hard and I'm hoping for a much better year of 2021!
 
-With fewer goals, 2021 will be more about who I am and what I want to be passionate about.
+With fewer goals, 2021 will be more about who I am and what I want to be passionate about. More about the direction, not goal.
 
 And last but not least, let's all get vaccinated so we can return to any type of normality pretty soon. Here's hoping!
 
