--- a/en/_posts/2020-01-10-podcast-197.md
+++ b/en/_posts/2020-01-10-podcast-197.md
@@ -27,8 +27,8 @@ This week on [The Podcast][p] we discuss a concept of “horizontal responsibili
 ## Show notes for this episode:
 
   * [Holacracy: The New Management System for a Rapidly Changing World](https://www.amazon.com/Holacracy-Management-System-Rapidly-Changing/dp/B00WEWIZYK/) ([audible](https://www.audible.com/pd/Holacracy-Audiobook/B00WFP47MK))
-  * [Holacracy: A Radical New Approach to Management | Brian Robertson](https://www.youtube.com/watch?v=tJxfJGo-vkI)
-  * [Brian J. Robertson: "Holacracy" with Bonus Q&A | Talks at Google](https://www.youtube.com/watch?v=zGLJRpAKS6E)
+  * [Holacracy: A Radical New Approach to Management by Brian Robertson](https://www.youtube.com/watch?v=tJxfJGo-vkI)
+  * [Brian J. Robertson: "Holacracy" with Bonus Q&A - Talks at Google](https://www.youtube.com/watch?v=zGLJRpAKS6E)
 
 [y]: https://michael.gratis/thepodcastyt
 [rss]: https://thepodcast.fm/episodes?format=RSS
