--- a/pl/_posts/2021-02-03-huj.md
+++ b/pl/_posts/2021-02-03-huj.md
@@ -6,7 +6,7 @@ vid: "Oq2pY7YjKsc"
 # W podcaście Haotycznie Uporządkowane Jednostki
 
 Pod koniec grudnia zeszłego roku wystąpiłem w podcaście o dosyć prowokującej nazwie gdzie z Krzysztofem i Karolem gadaliśmy dosyć długo o wielu rzeczach, w tym zarządzaniu firmą zdalną, zadaniach itd. Rozmowa długa ale bardzo ciekawa, zapraszam!
- [Więcej informacji ℹ️](https://d3ctxlq1ktw2nl.cloudfront.net/staging/2021-01-25/108b918162030f37255bd1c0cc381d14.m4a)
+ [Więcej informacji ℹ️](https://anchor.fm/huj/episodes/16-Micha-liwiski-eo5c4s)
 
 {% include video.html id=page.vid %}
 
