--- a/en/_posts/2021-02-04-now210204.md
+++ b/en/_posts/2021-02-04-now210204.md
@@ -5,7 +5,7 @@ img: "now210204.jpg"
 
 # What's up as of February 4?
 
-
+The first month of 2021 is over, the virus is still there but we're hoping that things will be looking up for us!
 
 <!--More-->
 
@@ -26,9 +26,8 @@ img: "now210204.jpg"
 ## …and privately
 
 * Started [Exodus 90](https://exodus90.com) with a few buddies of mine. More prayer, more reflection, more fitness, more fasting.
-* Figuring out how to have an exciting family life when we’re basically confined in our home.
 * Reset the counter for sports. Making sure I stay fit and I’m on track for my 50km swim, 500km run and 2000km bike milestones.
-* Taking good care of my family: Ewelina, my wife of 15 years and my 3 daughters: Milena (11), Emilia (8) and Liliana (4)
+* Figuring out how to have an exciting family life when we’re basically confined in our home. One of these things was buildng a new Lego Porsche by myself (pictured above).
 
 {% include video.html id="bH6R6zbd-ZY" %}
 
